# glissade

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: build.yml  publish.yml
examples/: SLIDES.md
glissade/: __init__.py  __main__.py  cli.py
glissade/data/: script.js  style.css
glissade/data/scripts/: live-reload.js
glissade/data/templates/: nav.html  slide.html  slides.html  template.html
glissade/data/themes/: default.css  frappe.css  latte.css  macchiato.css  mocha.css
glissade/lib/: io.py  live.py  parser.py  pdf.py  renderer.py
